--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -1,8 +1,10 @@
 // Color variables
-$red          : #FF0000;
-$dark-red     : #CC0000;
-$cerulean-blue: #3B4CCA;
-$golden-yellow: #FFDE00;
-$gold-foil    : #B3A125;
-$off-white    : #F5F5F5;
-$black        : #000000;
+$red: #ff0000;
+$dark-red: #cc0000;
+$cerulean-blue: #3b4cca;
+$golden-yellow: #ffde00;
+$gold-foil: #b3a125;
+$off-white: #f5f5f5;
+$black: #000000;
+
+$green: #41ff00;
