--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -35,7 +35,7 @@ ul :hover {
   flex-flow: row nowrap;
   margin-left: auto;
   margin-right: auto;
-  width: 480px;
+  width: 35em;
   height: 20em;
   border: solid;
   border-color: $green;
@@ -46,42 +46,44 @@ ul :hover {
   overflow: auto;
   scrollbar-color: $green gray;
   scrollbar-width: thin;
-  width: 50%;
+  width: 40%;
   border-right: 1px solid $green;
 }
 
 // Poke Details
 .pokemon-detail {
   display: flex;
-  flex-flow: row wrap;
+  flex-direction: column;
   justify-content: space-between;
-  width: auto;
+  width: 60%;
+}
+
+.poke-top {
+  display: flex;
+  justify-content: space-around;
 }
 
 .poke-left {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  height: 50%;
-  width: 50%;
+  width: 40%;
 }
 
-img {
-  filter: grayscale(1) brightness(0.5);
+.poke-img {
+  width: 75%;
+  top: 50%;
+  left: 50%;
+  height: auto;
 }
 
 .poke-right {
-  text-align: left;
-  height: 50%;
-  width: 50%;
-}
-
-h2 {
-  padding-bottom: 0;
-  margin-bottom: 0;
-}
-
-h3 {
-  margin: 0;
-  padding: 0;
+  display: flex;
+  flex-direction: column;
+  width: 60%;
 }
 
 .poke-bottom {
